k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 3 # 파드를 3개 띄워서 부하 분산
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: nye0817/e-on-backend:latest 
        imagePullPolicy: Always
        ports:
        - containerPort: 4000
        livenessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 30  # 서버 켜질 때까지 30초 기다려줌
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 4000
          initialDelaySeconds: 60
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - port: 4000
      targetPort: 4000
