k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: nye0817/e-on-frontend:v3 # 본인 이미지로 변경
        imagePullPolicy: Always
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: LoadBalancer # GCP가 외부 접속용 공인 IP를 만들어준다
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
